load("@io_bazel_rules_go//go:def.bzl", "nogo", "go_library", "go_test")

nogo(
    name = "nogo",
    config = "nogo.json",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_tools//go/analysis/passes/nilness:go_default_library"],
)

go_library(
    name = "genset",
    srcs = ["genset.go"],
    importpath = "github.com/farhaven/genset",
    visibility = ["//visibility:public"],
)
